--- a/view/frontend/layout/default.xml
+++ b/view/frontend/layout/default.xml
@@ -6,6 +6,9 @@
             <block class="Mageplaza\Seo\Block\Page\Head\Page" name="mageplaza_seo_canonical"
                    template="Mageplaza_Seo::page/head/canonical.phtml">
             </block>
+            <block class="Mageplaza\Seo\Block\Page\Head\Page" name="mageplaza_seo_site_verification"
+                   template="Mageplaza_Seo::page/head/verification.phtml">
+            </block>
         </referenceBlock>
 
         <referenceContainer name="after.body.start" before="-">
