--- a/view/frontend/templates/page/head/verification.phtml
+++ b/view/frontend/templates/page/head/verification.phtml
@@ -9,3 +9,6 @@
 <?php if($block->getPinterestVerificationCode()):?>
 <meta name="p:domain_verify" content="<?php echo $block->getPinterestVerificationCode(); ?>"/>
 <?php endif;?>
+<?php if($block->getYandexVerificationCode()):?>
+<meta name="yandex-verification" content="<?php echo $block->getYandexVerificationCode(); ?>"/>
+<?php endif;?>
