--- a/view/frontend/templates/sitemap/page.phtml
+++ b/view/frontend/templates/sitemap/page.phtml
@@ -1,4 +1,5 @@
 <?php
+/** @type \Mageplaza\Seo\Block\Sitemap $block */
 $collection = $block->getPageCollection();
 ?>
 <h2><?php echo __('Pages'); ?></h2>
