--- a/view/frontend/templates/richsnippets/jsonld/organization.phtml
+++ b/view/frontend/templates/richsnippets/jsonld/organization.phtml
@@ -1,6 +1,9 @@
 <!-- Customizing Knowledge Graph by Mageplaza SEO-->
 <!--Social Profiles, Business information -->
-<?php if ($block->getHelper()->getInfoConfig('enable')): ?>
+<?php /** @var \Mageplaza\Seo\Block\Richsnippets\Organization $block */
+$helper = $block->getHelper();
+?>
+<?php if ($helper->getInfoConfig('enable') && $helper->getRichsnippetsConfig('custom')): ?>
 	<script type="application/ld+json">
 {
   "@context" : "http://schema.org",
