--- a/view/frontend/layout/catalog_product_gallery.xml
+++ b/view/frontend/layout/catalog_product_gallery.xml
@@ -2,9 +2,8 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <referenceBlock name="head.additional">
-        <block class="Mageplaza\Seo\Block\Page\Head\Page" name="mageplaza_seo_search_result"
-               ifconfig="seo/general/nofollow_sr"
-               template="Mageplaza_Seo::search/result.phtml">
+        <block class="Mageplaza\Seo\Block\Page\Head\Search\Catalog" name="mageplaza_seo_search_result"
+               ifconfig="seo/general/nofollow_sr">
         </block>
     </referenceBlock>
 </page>
